--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
    
     <section class="container mt-5">
         <h2>Overview:</h2>
-        <p>The user will input their initial investment amount, annual interest rate, and the year they plan to retire. The calculator will then calculate how much their investment will be worth by the year they retire.</p>
+        <ol>
+            <li>Input initial investment amount</li>
+            <li>Input annual interest rate</li>
+            <li>Input the year you plan to retire</li>  
+        </ol>
+            The calculator will then calculate how much your investment will be worth by the year you retire!</p>
     </section>
 
     <section class="container mt-5">
