--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>Input the year you plan to retire</li>  
         </ol>
             The calculator will then calculate how much your investment will be worth by the year you retire!</p>
-            <p>Note: scroll up to see the result once you press the calculate button</p>
+            <p>Note: scroll up to see the result once you press the calculate button.</p>
     </section>
 
     <section class="container mt-5">
