--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>Input annual interest rate</li>
             <li>Input the year you plan to retire</li>  
         </ol>
-            The calculator will then calculate how much your investment will be worth by the year you retire!</p>
+            <p>The calculator will then calculate how much your investment will be worth by the year you retire!</p>
             <p>Note: scroll up to see the result once you press the calculate button.</p>
     </section>
 
@@ -44,9 +44,10 @@
                 <input type="number" class="form-control" id="retirement-year" name="retirement-year" required>
             </div>
             <button type="submit" class="btn btn-primary">Calculate</button>
-        </form>
-
+           </form>
         <h3 class="mt-3" id="result"></h3>
+
+       
     </section>
 
     <script>
