--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
            </form>
            <footer>
             <h3 class="mt-3" id="result"></h3>
-            <p>Thank you for using Investment Growth Calculator</p>
+            <p>Thank you for using Calculate My Investment</p>
 
            </footer>
     </section>
