--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 </head>
 <body>
     <header>
-        <h1><img id="calculator" src="calculator-svgrepo-com.svg" width="50" height="50" alt="calculator"><strong>Investment Growth Calculator</strong></h1>
+        <h1><img id="calculator" src="calculator-svgrepo-com.svg" width="50" height="50" alt="calculator"><strong>Calculate My Investment</strong></h1>
     </header>
-    <br>
-    <br>
-    <br>
-    <br>
+  
    
     <section class="container mt-5">
         <h2>Overview:</h2>
@@ -46,7 +43,7 @@
            </form>
            <footer>
             <h3 class="mt-3" id="result"></h3>
-            <p>Thank you for using Calculate My Investment</p>
+            <p><strong>Thank you for using Calculate My Investment</strong></p>
 
            </footer>
     </section>
